# dissect-monorepo-test

./: .gitignore  Justfile  pyproject.toml  ruff.toml
projects/dissect/: README.md  pyproject.toml
projects/dissect.apfs/: COPYRIGHT  README.md  pyproject.toml  tox.ini
projects/dissect.apfs/dissect/apfs/: __init__.py  c_apfs.py
projects/dissect.apfs/dissect/apfs/objects/: gbitmap_block.py  keybag.py  nx_fusion_wbc.py  nx_fusion_wbc_list.py  spaceman.py  spaceman_cib.py
projects/dissect.apfs/src/dissect/apfs/: __init__.py  apfs.py  c_apfs.py  c_apfs.pyi  cursor.py  stream.py  util.py
projects/dissect.apfs/tests/: conftest.py  test_apfs.py  test_exception.py
projects/dissect.apfs/tests/_docs/: conf.py
projects/dissect.archive/: .git-blame-ignore-revs  .gitattributes  COPYRIGHT  README.md  pyproject.toml
projects/dissect.archive/src/dissect/archive/: c_vbk.py  c_vma.py  c_wim.py  exceptions.py  vbk.py  vma.py  wim.py  xva.py
projects/dissect.archive/tests/: conftest.py  test_exceptions.py  test_vbk.py  test_vma.py  test_wim.py
projects/dissect.archive/tests/_docs/: conf.py
projects/dissect.btrfs/: .git-blame-ignore-revs  pyproject.toml
projects/dissect.btrfs/tests/_docs/: conf.py
projects/dissect.contrib/: COPYRIGHT  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
projects/dissect.contrib/.github/workflows/: dissect-ci.yml
projects/dissect.contrib/template/: README.md  pyproject.toml  setup.cfg  setup.py
projects/dissect.cstruct/: pyproject.toml
projects/dissect.cstruct/src/dissect/cstruct/: cstruct.py  exceptions.py  expression.py  parser.py  utils.py
projects/dissect.cstruct/tests/: test_basic.py  test_benchmark.py  test_expression.py  test_parser.py  test_tools_stubgen.py  test_types_pointer.py  test_types_structure.py
projects/dissect.cstruct/tests/_docs/: conf.py
projects/dissect.database/: COPYRIGHT  README.md  pyproject.toml
projects/dissect.database/src/dissect/database/: __init__.py
projects/dissect.database/tests/: _util.py  conftest.py
projects/dissect.database/tests/_data/sqlite3/: test.sqlite  test.sqlite-wal
projects/dissect.database/tests/_docs/: conf.py
projects/dissect.database/tests/_tools/sqlite3/: generate_sqlite.py
projects/dissect.database/tests/bsd/: conftest.py  test_db.py  test_rpm.py
projects/dissect.database/tests/ese/: conftest.py  test_cursor.py  test_ese.py  test_index.py  test_page.py  test_record.py  test_table.py
projects/dissect.database/tests/ese/ntds/: conftest.py  test_benchmark.py  test_ntds.py  test_pek.py  test_query.py  test_schema.py  test_sd.py  test_util.py
projects/dissect.database/tests/ese/tools/: test_certlog.py  test_sru.py  test_ual.py
projects/dissect.database/tests/sqlite3/: conftest.py  test_default_values.py  test_row.py  test_sqlite3.py  test_util.py  test_wal.py
projects/dissect.etl/: pyproject.toml
projects/dissect.etl/tests/_docs/: conf.py
projects/dissect.evidence/: README.md  pyproject.toml
projects/dissect.evidence/src/dissect/evidence/: __init__.py  exception.py
projects/dissect.evidence/tests/: conftest.py  test_ad1.py  test_asdf.py  test_ewf.py  test_exception.py
projects/dissect.evidence/tests/_data/ad1/: compressed.ad1  long.ad1  test.ad1
projects/dissect.evidence/tests/_data/ewf/: ewf.E01
projects/dissect.evidence/tests/_docs/: conf.py
projects/dissect.evidence/tests/tools/: test_adcrypt.py
projects/dissect.executable/: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
projects/dissect.executable/.github/workflows/: dissect-ci.yml
projects/dissect.executable/src/dissect/executable/: __init__.py  exception.py
projects/dissect.executable/tests/: _utils.py  test_dump.py  test_elf.py  test_section.py  test_segment.py  test_segment_table.py  util.py
projects/dissect.executable/tests/_docs/: conf.py
projects/dissect.executable/tests/elf/: test_dump.py  test_elf.py  test_section.py  test_segment.py  test_segment_table.py
projects/dissect.executable/tests/pe/: test_pe.py
projects/dissect.extfs/: pyproject.toml
projects/dissect.fat/: pyproject.toml
projects/dissect.fve/: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  tox.ini
projects/dissect.fve/.github/workflows/: dissect-ci.yml
projects/dissect.fve/tests/: _utils.py  conftest.py  test_bde.py  test_bde_eow_bitmap.py  test_crypto.py  test_luks.py  test_luks_kdf.py  test_luks_metadata.py
projects/dissect.fve/tests/bde/: conftest.py  test_bde.py
projects/dissect.fve/tests/crypto/: test_crypto.py  test_elephant.py
projects/dissect.fve/tests/luks/: test_luks.py
projects/dissect.hypervisor/: pyproject.toml
projects/dissect.hypervisor/tests/_docs/: conf.py
projects/dissect.jffs/: .git-blame-ignore-revs  .gitattributes  .gitignore  COPYRIGHT  README.md  pyproject.toml  tox.ini
projects/dissect.jffs/.github/workflows/: dissect-ci.yml
projects/dissect.jffs/tests/: conftest.py  test_exceptions.py  test_jffs2.py
projects/dissect.jffs/tests/_docs/: conf.py
projects/dissect.ntfs/: pyproject.toml
projects/dissect.ntfs/tests/_docs/: conf.py
projects/dissect.qnxfs/: COPYRIGHT  README.md  pyproject.toml  tox.ini
projects/dissect.qnxfs/.github/workflows/: dissect-ci.yml
projects/dissect.qnxfs/tests/: conftest.py  test_exceptions.py  test_qnx.py
projects/dissect.regf/: pyproject.toml
projects/dissect.regf/tests/_docs/: conf.py
projects/dissect.shellitem/: pyproject.toml
projects/dissect.shellitem/tests/_docs/: conf.py
projects/dissect.squashfs/: .git-blame-ignore-revs  .gitignore  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py
projects/dissect.squashfs/.github/workflows/: dissect-ci.yml
projects/dissect.squashfs/tests/: conftest.py  test_exceptions.py  test_squashfs.py
projects/dissect.squashfs/tests/_docs/: conf.py
projects/dissect.squashfs/tests/data/: gzip-opts.sqfs  gzip.sqfs  lz4.sqfs  lzma.sqfs  lzo.sqfs  xz.sqfs  zstd.sqfs
projects/dissect.thumbcache/: pyproject.toml
projects/dissect.util/: pyproject.toml
projects/dissect.util/tests/_docs/: conf.py
(+370 files in other folders)
