[project]
name = "dissect-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
test = ["pytest>=8.4.0", "pytest-xdist>=3"]
dev = ["ruff==0.13.1", "vermin>=1.6.0", "pytest>=8.4.0", "pytest-xdist>=3"]

[tool.monorepo.test]
python-versions = ["3.10", "3.11", "3.12", "3.13", "pypy3.11"]
os = ["ubuntu-latest", "windows-latest"]

[tool.uv]
python-downloads = "automatic"

[tool.uv.workspace]
members = ["projects/*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
