[project]
name = "dissect-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
test = ["pytest>=8.4.0", "pytest-xdist>=3"]
dev = ["ruff==0.13.1", "vermin>=1.6.0", "pytest>=8.4.0", "pytest-xdist>=3"]

[tool.monorepo.test]
python-versions = ["3.10", "3.11", "3.12", "3.13", "pypy3.11"]
os = ["ubuntu-latest", "windows-latest"]

# ---------------------------------------------------------------------------
# cibuildwheel — shared config for all native (Rust) projects.
# Run with: cibuildwheel --config-file pyproject.toml projects/<pkg>
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build-frontend = "build"
config-settings = "--build-rust --build-option=--py-limited-api=cp310"
# Free-threaded and restricted musl targets have no Rust release support.
skip = ["cp3??t-*", "*-musllinux_i686", "*-musllinux_ppc64le", "*-musllinux_s390x", "*-musllinux_armv7l"]
test-requires = ["pytest"]
test-command = "pytest --force-native {package}/tests"

[tool.cibuildwheel.linux]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = {PATH = "$HOME/.cargo/bin:$PATH"}

[tool.cibuildwheel.macos]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable"
environment = {PATH = "$HOME/.cargo/bin:$PATH"}

[tool.cibuildwheel.windows]
before-all = "rustup target add i686-pc-windows-msvc"  # only needed for x86; no-op otherwise

[tool.uv]
python-downloads = "automatic"

[tool.uv.workspace]
members = ["projects/*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
