[build-system]
requires = ["setuptools>=77.0.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.8"
name = "dissect.archive"
description = "A Dissect module implementing parsers for various archive and backup formats"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=4,<5",
    "dissect.util>=3.22,<4",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.archive"
repository = "https://github.com/fox-it/dissect.archive"

[project.optional-dependencies]
full = [
    "rich",
]
dev = [
    "dissect.archive[full]",
    "dissect.cstruct>=4.0.dev,<5.0.dev",
    "dissect.util>=3.22.dev,<4.0.dev",
]

[dependency-groups]
test = [
]
lint = [
    "vermin",
]
build = [
    "build",
]
debug = [
    "ipdb",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "debug"},
]

[project.scripts]
vma-extract = "dissect.archive.tools.backup:main"
vbk-extract = "dissect.archive.tools.backup:main"
backup-extract = "dissect.archive.tools.backup:main"

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]


[tool.uv.sources."dissect.archive"]
workspace = true

[tool.uv.sources."dissect.cstruct"]
workspace = true

[tool.uv.sources."dissect.util"]
workspace = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.archive"]
known-third-party = ["dissect"]
required-imports = ["from __future__ import annotations"]


[tool.pytest.ini_options]
testpaths = ["tests"]
