[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.contrib"
description = "This project is a meta package: it reserves the namespace for Dissect packages made by external contributors"
readme = "README.md"
requires-python = "~=3.9"
license.text = "Affero General Public License v3"
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
repository = "https://github.com/fox-it/dissect.contrib"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["dissect.contrib"]
known_third_party = ["dissect"]

[tool.setuptools]
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
