[build-system]
requires = ["setuptools>=77.0.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
version = "4.7"
name = "dissect.cstruct"
description = "A Dissect module implementing a parser for C-like structures: structure parsing in Python made easy"
readme = "README.md"
requires-python = ">=3.10"
license =  "Apache-2.0"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.cstruct"
repository = "https://github.com/fox-it/dissect.cstruct"
changelog = "https://github.com/fox-it/dissect.cstruct/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "typing_extensions"
]

[dependency-groups]
test = [
]
lint = [
    "typing_extensions",
    "vermin",
]
build = [
    "build",
]
debug = [
    "ipdb",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "debug"},
]

[project.scripts]
cstruct-stubgen = "dissect.cstruct.tools.stubgen:main"

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]


[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.cstruct"]
known-third-party = ["dissect"]
required-imports = ["from __future__ import annotations"]


[tool.pytest.ini_options]
testpaths = ["tests"]
