[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.1"
name = "dissect.database"
description = "A Dissect module implementing parsers for various database formats, including Berkeley DB, Microsofts Extensible Storage Engine (ESE) and SQLite3"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=4,<5",
    "dissect.util>=3.24,<4",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.database"
repository = "https://github.com/fox-it/dissect.database"

[project.optional-dependencies]
full = [
    "pycryptodome"
]
dev = [
    "dissect.database[full]",
    "dissect.cstruct>=4.0.dev,<5.0.dev",
    "dissect.util>=3.24,<4.0.dev",
]

[dependency-groups]
test = [
]
lint = [
    "vermin",
    "typing_extensions",
]
build = [
    "build",
]
debug = [
    "ipdb",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "debug"},
]

[project.scripts]
dissect-ntds = "dissect.database.ese.ntds.tools.ntds:main"
dissect-ual = "dissect.database.ese.tools.ual:main"
dissect-sru = "dissect.database.ese.tools.sru:main"
dissect-certlog = "dissect.database.ese.tools.certlog:main"
dissect-rpm = "dissect.database.bsd.tools.rpm:main"
dissect-impacket = "dissect.database.ese.tools.impacket:main"

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]


[tool.uv.sources."dissect.cstruct"]
workspace = true

[tool.uv.sources."dissect.database"]
workspace = true

[tool.uv.sources."dissect.util"]
workspace = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.database"]
known-third-party = ["dissect"]
required-imports = ["from __future__ import annotations"]


[tool.pytest.ini_options]
testpaths = ["tests"]
