[build-system]
requires = ["setuptools>=77.0.0"]
backend-path = ["src/dissect/fve"]
build-backend = "_build"

[project]
version = "4.7.0"
name = "dissect.fve"
description = "A Dissect module implementing a parsers for full volume encryption implementations, currently Linux Unified Key Setup (LUKS1 and LUKS2) and Microsoft's Bitlocker Disk Encryption"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=4,<5",
    "dissect.util>=3.22,<4",
    "pycryptodome",
]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.fve"
repository = "https://github.com/fox-it/dissect.fve"

[project.optional-dependencies]
full = [
    "dissect.target",
    "rich",
]
argon2 = ["argon2-cffi"]

[project.scripts]
fve-dd = "dissect.fve.tools.dd:main"

[tool.setuptools.packages.find]
include = ["dissect.*"]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["_native.src/*"]

[[tool.setuptools-rust.ext-modules]]
target = "dissect.fve._native"
path = "src/dissect/fve/_native.src/Cargo.toml"
features = ["pyo3/extension-module"]
strip = "All"

[tool.uv.sources."dissect.cstruct"]
workspace = true

[tool.uv.sources."dissect.target"]
workspace = true

[tool.uv.sources."dissect.util"]
workspace = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["dissect.fve"]
known-third-party = ["dissect"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.monorepo]
native = true
